--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -7,4 +7,4 @@ header:
 excerpt: "Second major programming project, created in C++."
 ---
 
-# H1 It's High Noon! - Made in C++
+## It's High Noon! - Made in C++
