--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -5,6 +5,18 @@ tags: [c++]
 header:
     image: "images/cpplogo.png"
 excerpt: "Second major programming project, created in C++."
+gallery:
+  - url: /images/cppgame1.png
+    image_path: images/cppgame1.png
+    alt: "The title screen"
+  - url: /images/cppgame2.png
+    image_path: images/cppgame2.png
+    alt: "Game in progress"
+  - url: /images/cppgame3.png
+    image_path: images/cppgame3.png
+    alt: "End screen with score entry"
 ---
 
 ## It's High Noon! - Made in C++
+
+{% include gallery caption="A gallery showing various menus and gameplay." %}
