--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -19,4 +19,183 @@ gallery:
 
 ## It's High Noon! - Made in C++
 
+As my second major project for one of my second term modules, I wanted to increase the scope from the previous python work. After the console-based text adventure game I created, I wanted to expand into a graphical medium, and I decided upon a top down shooter. This gave me an opportunity to learn how to correctly set up and use a graphics library and I chose SFML (Simple and Fast Multimedia Library).
+
+I built upon many of the major aspects of novice programming that allowed me to expand upon what I already knew, including but not limited to: -
+
+_Multi-dimensional vectors:_
+
+```c++
+
+    void DrawMapTiles(vector<vector<Vector2i>>(&Map), Sprite& Tiles, RenderWindow& GameScreen)
+{
+	for (int i = 0; i < Map.size(); i++)
+	{	
+		for (int j = 0; j < Map[i].size(); j++)
+		{
+			Tiles.setPosition(j * 16, i * 16);
+			Tiles.setTextureRect(IntRect((Map)[i][j].x * 16, (Map)[i][j].y * 16, 16, 16));
+			GameScreen.draw(Tiles);
+		}
+	}
+}
+
+//Creates the collision tiles, defined from a map text file
+void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTiles))
+{
+	for (int i = 0; i < Map.size(); i++)
+	{
+		for (int j = 0; j < Map[i].size(); j++)
+		{
+			if (Map[i][j].x == 0 && Map[i][j].y == 0)
+			{
+				CollisionTile CTile(Vector2f((j * 16), (i * 16)), Vector2f(16, 16), Color::Transparent);
+				CTile.Collision = false;
+				ColTiles.push_back(CTile);
+			}
+			else if (Map[i][j].x > 0 || Map[i][j].y > 0)
+			{
+				CollisionTile CTile(Vector2f((j * 16), (i * 16)), Vector2f(16, 16), Color::Transparent);
+				CTile.Collision = true;
+				ColTiles.push_back(CTile);
+			}
+		}
+	}
+}
+
+```
+
+_Classes and structs:_
+
+```c++
+
+    //Acts as the parent class for creating virtual screen objects.
+    //All other screens inherit from this class.
+    class cScreen
+    {
+    public:
+	    virtual int Run(sf::RenderWindow &App) = 0;
+    };
+
+```
+```c++
+
+    //Header file for Player class
+    //Player class contains all info and functions for the Player object.
+    class Player
+    {
+    public:
+        Player();
+        ~Player();
+        Player(Vector2f position, Vector2f size);
+        void PlayerAction(Player &player, Vector2f screensize, vector<CollisionTile> &ColTiles, Clock &frameclock, Time &frametime);
+        void CheckPlayerPos();
+        void SetPlayerTexture(string TextureFile , Player &player);
+        bool ColMap(CollisionTile tile);
+        void ColEnemy(Player &player, vector<Enemy> &enemies, Clock &dmgclock, Time &sincedmg);
+        int playerHP;
+        RectangleShape playerRect;
+        Texture playerTexture;
+
+    private:
+        float top, bottom, left, right;
+        float maxSpeed;
+        float minSpeed;
+    };
+
+_Storing and loading information from files, such as my custom sprite sheets that I created for the project:_
+
+```c++
+
+    //Loads and checks texture file.
+    void SetTextureFile(string TextureFile, Texture& TileTexture, Sprite& Tiles)
+    {
+        TileTexture.loadFromFile(TextureFile);
+        if (!TileTexture.loadFromFile(TextureFile))
+        {
+            cout << TextureFile << "is not present, cannot run program." << endl;;
+        }
+        Tiles.setTexture(TileTexture);
+    }
+```
+
+<img src="/images/TileSetProject.png" alt="Tile Set" class="align-center">
+
+_Creating the game world and collision from a tile set, allowing the user to edit the map and collision from notepad, without having to possess knowledge of programming:_
+
+```c++
+
+    while (!MapFile.eof())
+    {
+        string str;
+        MapFile >> str;
+
+        stringstream ss(str);
+        vector<int> Coordinates;
+
+        int i;
+
+        //while the string stream loads each part of the string to i, ignoring commas, it pushes i onto the coordinate vector.
+        while (ss >> i)
+        {
+            Coordinates.push_back(i);
+
+            if (ss.peek() == ',')
+                ss.ignore();
+        }
+
+        int FirstCord = Coordinates[0];
+        int SecondCord = Coordinates[1];
+
+        //The coordinate vectors are loaded into the map counters.
+        MapCounter.push_back(Vector2i(SecondCord, FirstCord));
+
+        //Map counter increases x counter every time it loops, and increases y if a newline is present in the file.
+        if (MapFile.peek() == '\n')
+        {
+            //Added to the main map vector.
+            Map.push_back(MapCounter);
+            MapCounter.clear();
+        }
+    }
+    //Last push back added so last line of the file is properly loaded.
+    Map.push_back(MapCounter);
+
+    //close the file
+    MapFile.close();
+    
+```
+
+_Using more advance calculations, such as firing the projectiles to the mouse pointer, and destroying them when out of bounds or on contact with collision:_
+
+```c++
+
+//Calculate projectile direction and velocity, amount of shots per click limited by timer
+void Bullet::CalShot(Bullet &bullet, Clock &shotclock, Time &sinceshot, vector<Bullet> &bullets, RenderWindow &gamescreen, Player &player)
+{
+	Vector2f mousePos = gamescreen.mapPixelToCoords(Mouse::getPosition(gamescreen));
+	Vector2f aimAngle = mousePos - Vector2f(player.playerRect.getPosition().x + (player.playerRect.getSize().x / 2), player.playerRect.getPosition().y + player.playerRect.getSize().y);
+	Vector2f aimAngleNorm = aimAngle / (sqrt(pow(aimAngle.x, 2) + pow(aimAngle.y, 2)));
+
+	if (Mouse::isButtonPressed(Mouse::Left))
+	{
+		sinceshot = shotclock.getElapsedTime();
+
+		if (sinceshot.asSeconds() > 0.2)
+		{
+			bullet.bulletRect.setPosition(player.playerRect.getPosition().x + (player.playerRect.getSize().x / 2), player.playerRect.getPosition().y + player.playerRect.getSize().y);
+
+			bullet.currentVelo = aimAngleNorm * bullet.maxSpeed;
+
+			bullets.push_back(Bullet(bullet));
+			shotclock.restart();
+		}
+	}
+}
+
+```
+
+Overall, I was pleased with the result, and what I had learned from doing it. There are quite a few items I would have liked to add with a larger time frame, for example, implementing some A* algorithm pathfinding for the enemies, and hooking up sounds. While the latter would be simple the former is quite technical, and I have started looking into how pathfinding works to help me with further projects and my general understanding.
+
+
 {% include gallery caption="A gallery showing various menus and gameplay." %}
