--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -103,6 +103,8 @@ _Classes and structs:_
         float minSpeed;
     };
 
+```
+
 _Storing and loading information from files, such as my custom sprite sheets that I created for the project:_
 
 ```c++
@@ -119,7 +121,7 @@ _Storing and loading information from files, such as my custom sprite sheets tha
     }
 ```
 
-<img src="/images/TileSetProject.png" alt="Tile Set" class="align-center">
+<img src="https://github.com/Sir-Benj/Portfolio/blob/master/images/TileSetProject.png" alt="Tile Set" class="align-center">
 
 _Creating the game world and collision from a tile set, allowing the user to edit the map and collision from notepad, without having to possess knowledge of programming:_
 
