--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -121,7 +121,7 @@ _Storing and loading information from files, such as my custom sprite sheets tha
     }
 ```
 
-<img src="https://raw.githubusercontent.com/Sir-Benj/Portfolio/master/images/TileSetProject.png" alt="Tile Set" class="align-center">
+<img src="https://sir-benj.github.io/Portfolio/images/TileSetProject.png" alt="Tile Set" class="align-center">
 
 _Creating the game world and collision from a tile set, allowing the user to edit the map and collision from notepad, without having to possess knowledge of programming:_
 
