--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -120,8 +120,12 @@ _Storing and loading information from files, such as my custom sprite sheets tha
         Tiles.setTexture(TileTexture);
     }
 ```
+<p> </p>
 
-<img src="https://sir-benj.github.io/Portfolio/images/TileSetProject.png" alt="Tile Set" class="align-center">
+<figure class="align-center"> == $0
+    <img src="https://sir-benj.github.io/Portfolio/images/TileSetProject.png" alt="Tile Set" class="align-center">
+    <figcaption>The tile set for the game.</figcaption>
+</figure>
 
 _Creating the game world and collision from a tile set, allowing the user to edit the map and collision from notepad, without having to possess knowledge of programming:_
 
