--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -205,3 +205,5 @@ Overall, I was pleased with the result, and what I had learned from doing it. Th
 
 
 {% include gallery caption="A gallery showing various menus and gameplay." %}
+
+<a href="https://github.com/Sir-Benj/Cpp-Game-Project">This</a> is a link to the GitHub repository for the project.
