--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -122,7 +122,7 @@ _Storing and loading information from files, such as my custom sprite sheets tha
 ```
 <p> </p>
 
-<figure class="align-center"> == $0
+<figure class="align-center">
     <img src="https://sir-benj.github.io/Portfolio/images/TileSetProject.png" alt="Tile Set" class="align-center">
     <figcaption>The tile set for the game.</figcaption>
 </figure>
