--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -26,7 +26,7 @@ I built upon many of the major aspects of novice programming that allowed me to 
 _Multi-dimensional vectors:_
 
 ```c++
-
+//Draws the map tiles to the screen based on the file coordinates given in the map vector
 void DrawMapTiles(vector<vector<Vector2i>>(&Map), Sprite& Tiles, RenderWindow& GameScreen)
 {
 	for (int i = 0; i < Map.size(); i++)
@@ -43,24 +43,24 @@ void DrawMapTiles(vector<vector<Vector2i>>(&Map), Sprite& Tiles, RenderWindow& G
 //Creates the collision tiles, defined from a map text file
 void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTiles))
 {
-for (int i = 0; i < Map.size(); i++)
-{
-for (int j = 0; j < Map[i].size(); j++)
-{
-if (Map[i][j].x == 0 && Map[i][j].y == 0)
-{
-    CollisionTile CTile(Vector2f((j * 16), (i * 16)), Vector2f(16, 16), Color::Transparent);
-    CTile.Collision = false;
-    ColTiles.push_back(CTile);
-}
-else if (Map[i][j].x > 0 || Map[i][j].y > 0)
-{
-    CollisionTile CTile(Vector2f((j * 16), (i * 16)), Vector2f(16, 16), Color::Transparent);
-    CTile.Collision = true;
-    ColTiles.push_back(CTile);
-}
-}
-}
+    for (int i = 0; i < Map.size(); i++)
+    {
+        for (int j = 0; j < Map[i].size(); j++)
+        {
+            if (Map[i][j].x == 0 && Map[i][j].y == 0)
+            {
+                CollisionTile CTile(Vector2f((j * 16), (i * 16)), Vector2f(16, 16), Color::Transparent);
+                CTile.Collision = false;
+                ColTiles.push_back(CTile);
+            }
+            else if (Map[i][j].x > 0 || Map[i][j].y > 0)
+            {
+                CollisionTile CTile(Vector2f((j * 16), (i * 16)), Vector2f(16, 16), Color::Transparent);
+                CTile.Collision = true;
+                ColTiles.push_back(CTile);
+            }   
+        }
+    }
 }
 
 ```
