--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -17,13 +17,11 @@ gallery:
     alt: "End screen with score entry"
 ---
 
-## It's High Noon! - Made in C++
-
 As my second major project for one of my second term modules, I wanted to increase the scope from the previous python work. After the console-based text adventure game I created, I wanted to expand into a graphical medium, and I decided upon a top down shooter. This gave me an opportunity to learn how to correctly set up and use a graphics library and I chose SFML (Simple and Fast Multimedia Library).
 
 I built upon many of the major aspects of novice programming that allowed me to expand upon what I already knew, including but not limited to: -
 
-_Multi-dimensional vectors:_
+###Multi-Dimensional Vectors:###
 
 ```c++
 //Draws the map tiles to the screen based on the file coordinates given in the map vector
@@ -65,7 +63,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
 
 ```
 
-_Classes and structs:_
+###Classes And Abstraction:###
 
 ```c++
 
@@ -105,7 +103,7 @@ _Classes and structs:_
 
 ```
 
-_Storing and loading information from files, such as my custom sprite sheets that I created for the project:_
+###Storing And Loading Information From Files###
 
 ```c++
 
@@ -127,7 +125,7 @@ _Storing and loading information from files, such as my custom sprite sheets tha
     <figcaption>The tile set for the game.</figcaption>
 </figure>
 
-_Creating the game world and collision from a tile set, allowing the user to edit the map and collision from notepad, without having to possess knowledge of programming:_
+###Creating The Game World And Collision From A Tile Set###
 
 ```c++
 
@@ -172,7 +170,7 @@ _Creating the game world and collision from a tile set, allowing the user to edi
     
 ```
 
-_Using more advance calculations, such as firing the projectiles to the mouse pointer, and destroying them when out of bounds or on contact with collision:_
+###Using More Advanced Calculations###
 
 ```c++
 
@@ -201,9 +199,8 @@ void Bullet::CalShot(Bullet &bullet, Clock &shotclock, Time &sinceshot, vector<B
 
 ```
 
-Overall, I was pleased with the result, and what I had learned from doing it. There are quite a few items I would have liked to add with a larger time frame, for example, implementing some A* algorithm pathfinding for the enemies, and hooking up sounds. While the latter would be simple the former is quite technical, and I have started looking into how pathfinding works to help me with further projects and my general understanding.
-
-
 {% include gallery caption="A gallery showing various menus and gameplay." %}
 
 <a href="https://github.com/Sir-Benj/Cpp-Game-Project">This</a> is a link to the GitHub repository for the project.
+
+The project documentation can also be found <a href="https://github.com/Sir-Benj/Portfolio/blob/master/documentation/Project_Documentation.docx">here</a>.
