--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -21,7 +21,7 @@ As my second major project for one of my second term modules, I wanted to increa
 
 I built upon many of the major aspects of novice programming that allowed me to expand upon what I already knew, including but not limited to: -
 
-###Multi-Dimensional Vectors:###
+###Multi-Dimensional Vectors:
 
 ```c++
 //Draws the map tiles to the screen based on the file coordinates given in the map vector
@@ -63,7 +63,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
 
 ```
 
-###Classes And Abstraction:###
+###Classes And Abstraction:
 
 ```c++
 
@@ -103,7 +103,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
 
 ```
 
-###Storing And Loading Information From Files###
+###Storing And Loading Information From Files
 
 ```c++
 
@@ -118,14 +118,14 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
         Tiles.setTexture(TileTexture);
     }
 ```
-<p> </p>
+</br>
 
 <figure class="align-center">
     <img src="https://sir-benj.github.io/Portfolio/images/TileSetProject.png" alt="Tile Set" class="align-center">
     <figcaption>The tile set for the game.</figcaption>
 </figure>
 
-###Creating The Game World And Collision From A Tile Set###
+###Creating The Game World And Collision From A Tile Set
 
 ```c++
 
@@ -202,5 +202,7 @@ void Bullet::CalShot(Bullet &bullet, Clock &shotclock, Time &sinceshot, vector<B
 {% include gallery caption="A gallery showing various menus and gameplay." %}
 
 <a href="https://github.com/Sir-Benj/Cpp-Game-Project">This</a> is a link to the GitHub repository for the project.
+
+</br>
 
 The project documentation can also be found <a href="https://github.com/Sir-Benj/Portfolio/blob/master/documentation/Project_Documentation.docx">here</a>.
