--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -118,9 +118,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
         Tiles.setTexture(TileTexture);
     }
 ```
-<p>
-</br>
-</p>
+<br/>
 
 <figure class="align-center">
     <img src="https://sir-benj.github.io/Portfolio/images/TileSetProject.png" alt="Tile Set" class="align-center">
@@ -172,7 +170,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
     
 ```
 
-##Using More Advanced Calculations
+#Using More Advanced Calculations
 
 ```c++
 
