--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -21,7 +21,7 @@ As my second major project for one of my second term modules, I wanted to increa
 
 I built upon many of the major aspects of novice programming that allowed me to expand upon what I already knew, including but not limited to: -
 
-##Multi-Dimensional Vectors:
+<h2>Multi-Dimensional Vectors:</h2>
 
 ```c++
 //Draws the map tiles to the screen based on the file coordinates given in the map vector
@@ -63,7 +63,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
 
 ```
 
-##Classes And Abstraction:
+<h2>Classes And Abstraction:</h2>
 
 ```c++
 
@@ -103,7 +103,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
 
 ```
 
-##Storing And Loading Information From Files
+<h2>Storing And Loading Information From Files</h2>
 
 ```c++
 
@@ -125,7 +125,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
     <figcaption>The tile set for the game.</figcaption>
 </figure>
 
-##Creating The Game World And Collision From A Tile Set
+<h2>Creating The Game World And Collision From A Tile Set</h2>
 
 ```c++
 
@@ -170,7 +170,7 @@ void CreateColTiles(vector<vector<Vector2i>>(&Map), vector<CollisionTile>(&ColTi
     
 ```
 
-#Using More Advanced Calculations
+<h2>Using More Advanced Calculations</h2>
 
 ```c++
 
