--- a/_posts/2018-09-30-cppgame.md
+++ b/_posts/2018-09-30-cppgame.md
@@ -199,7 +199,7 @@ void Bullet::CalShot(Bullet &bullet, Clock &shotclock, Time &sinceshot, vector<B
 
 ```
 
-{% include gallery caption="A gallery showing various menus and gameplay." %}
+{% include gallery caption="Various menus and gameplay." %}
 
 <a href="https://github.com/Sir-Benj/Cpp-Game-Project">This</a> is a link to the GitHub repository for the project.
 
