--- a/_posts/2018-10-23-monogame.md
+++ b/_posts/2018-10-23-monogame.md
@@ -3,6 +3,12 @@ title: "Monogame introduction and C# work (ongoing)"
 date: 2018-10-23
 tags: [development]
 header:
-    image: "images/cpplogo.png"
-excerpt: "Understanding C# and the Monogame framework."
+    image: "images/c#logo.png"
+excerpt: "Understanding c# and the Monogame framework."
 ---
+
+I'm already a little familiar with c# from doing some Unity work, however by using the Monogame framework it allows me to better learn the finesse behind creating good game code. Unity tends to hide away a lot of what it does in the engine, whereas with Monogame it allows me to have much more control over what is going on behind the scenes, and to understand what exactly the framework is doing.
+
+I'll be updating this post as I go through my development.
+
+<img src= "https://github.com/Sir-Benj/Portfolio/blob/master/images/monogame.png?raw=true" alt = "Monogame Logo" class = "center" style = "display: block; margin-left: auto; margin-right: auto;">
