--- a/_posts/2018-10-23-monogame.md
+++ b/_posts/2018-10-23-monogame.md
@@ -11,4 +11,4 @@ I'm already a little familiar with c# from doing some Unity work, however by usi
 
 I'll be updating this post as I go through my development.
 
-<img src= "https://github.com/Sir-Benj/Portfolio/blob/master/images/monogame.png?raw=true" alt = "Monogame Logo" class = "center" style = "display: block; margin-left: auto; margin-right: auto;">
+<img src= "https://github.com/Sir-Benj/Portfolio/blob/master/images/aboutpic.png?raw=true" alt = "HappyHappy" class = "center" style = "display: block; margin-left: auto; margin-right: auto;">
