--- a/_posts/2018-10-23-monogame.md
+++ b/_posts/2018-10-23-monogame.md
@@ -3,7 +3,7 @@ title: "Monogame introduction and C# work (ongoing)"
 date: 2018-10-23
 tags: [development]
 header:
-    image: "images/c#logo.png"
+    image: "images/cshlogo.png"
 excerpt: "Understanding c# and the Monogame framework."
 ---
 
